ui-ux: Fix the navbar header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
 }
 #footer {
   background-color: #444;
@@ -56,6 +55,7 @@ nav {
   text-align:center;
 }
 nav h1 {
+  line-height: 80px;
   margin: auto;
 }
 nav h1 a {
@@ -71,7 +71,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -204,25 +203,20 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 9999;
+}
+.inside #maincontent {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-top: 131px;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 500px;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
 }
 #restaurant-name {
   color: #f18200;
@@ -235,7 +229,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 100%;
+  max-height: 350px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -248,19 +243,17 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 10px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 20px 40px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 40px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -274,19 +267,28 @@ nav h1 a {
   padding: 0;
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
+  background: #fff;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px;
   position: relative;
-  width: 85%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+}
+@media all and (min-width: 900px) {
+  .inside #maincontent {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, minmax(300px, auto));
+  }
+  .inside #map-container {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    height: auto;
+  }
 }
